--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.4",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
