--- a/ghumfir/pubspec.yaml
+++ b/ghumfir/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   riverpod: ^2.5.1
   hooks_riverpod: ^2.5.2
   flutter_rating_bar: ^4.0.1
+  cached_network_image: ^3.4.1
+  google_fonts: ^6.2.1
+  google_maps_flutter: ^2.9.0
+  custom_map_markers: ^0.0.2+1
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +70,7 @@ flutter:
     - assets/icons/navbar/
     - assets/images/
     - assets/icons/
+    - assets/icons/profile/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
