--- a/ghumfir/pubspec.yaml
+++ b/ghumfir/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_flutter: ^2.9.0
   custom_map_markers: ^0.0.2+1
   flutter_staggered_grid_view: ^0.7.0
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
