--- a/ghumfir/pubspec.yaml
+++ b/ghumfir/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   custom_map_markers: ^0.0.2+1
   flutter_staggered_grid_view: ^0.7.0
   file_picker: ^8.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
